--- a/src/ServerApp/ServerApp_Main/ServerApp_Main.csproj
+++ b/src/ServerApp/ServerApp_Main/ServerApp_Main.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SimpleWebServer" Version="1.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
