--- a/src/ESPSRC/platformio.ini
+++ b/src/ESPSRC/platformio.ini
@@ -13,4 +13,4 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_filters = esp32_exception_decoder
-board_build.partitions = huge_app.csv
+build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
