--- a/src/ServerApp/ServerApp_Main/ServerApp_Main.csproj
+++ b/src/ServerApp/ServerApp_Main/ServerApp_Main.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Quartz" Version="3.8.1" />
     <PackageReference Include="SimpleWebServer" Version="1.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
